--- a/app/src/main/res/layout/outputlayout.xml
+++ b/app/src/main/res/layout/outputlayout.xml
@@ -2,24 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10dp">
 
 
 
     <TextView
         android:id="@+id/txtMain"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:textStyle="bold"
+        android:gravity="center"
         android:textColor="@color/black"
-        android:text="Scan Result :" />
+        android:text=":: Scan Result ::" />
 
     <TextView
         android:id="@+id/txtResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:layout_weight="1"
         android:text="TextView" />
 </LinearLayout>
